# Stackelberg-Meta-Learning

./: .gitignore  LICENSE  README.md  main.py  main_ave_br.py  main_ave_largenn.py  main_meta.py  main_no_guide.py  misc_test.py  param.py  param_settings.py  plot_data.py  plot_figs.py  pyproject.toml  requirements.txt  utils.py  utils_meta.py
bash/: non_meta.sh  sg_meta.sh
experiments/: ave_output.py  ave_param.py  generate_data.py  plot_things.py  receding_horizon.py  train_meta.py  zero_guidance.py
sg_meta/: __init__.py  agent.py  meta.py  model.py  utils.py
